# nrp-devtools

./: .gitignore  README.md  nrp-installer.sh  pyproject.toml
.github/workflows/: main.yml
src/nrp_devtools/cli/: __init__.py  base.py  build.py  check.py  (+4 more)
src/nrp_devtools/templates/repository/{{cookiecutter.repository_name}}/: .gitignore  README.md  invenio.cfg  nrp  pyproject.toml  variables
src/nrp_devtools/templates/repository/{{cookiecutter.repository_name}}/{{cookiecutter.shared_package}}/assets/: webpack.py
src/nrp_devtools/templates/repository/{{cookiecutter.repository_name}}/{{cookiecutter.ui_package}}/branding/: webpack.py
src/nrp_devtools/templates/repository/{{cookiecutter.repository_name}}/{{cookiecutter.ui_package}}/branding/semantic-ui/less/: theme.config  theme.less
src/nrp_devtools/templates/repository/{{cookiecutter.repository_name}}/{{cookiecutter.ui_package}}/branding/templates/: .readme  header.html  header_frontpage.html
src/nrp_devtools/templates/repository/{{cookiecutter.repository_name}}/{{cookiecutter.ui_package}}/branding/templates/base/: css.html  page.html
src/nrp_devtools/templates/repository/{{cookiecutter.repository_name}}/{{cookiecutter.ui_package}}/components/: __init__.py
src/nrp_devtools/templates/repository/{{cookiecutter.repository_name}}/{{cookiecutter.ui_package}}/components/semantic-ui/less/components/: custom-components.less
src/nrp_devtools/templates/repository/{{cookiecutter.repository_name}}/{{cookiecutter.ui_package}}/titlepage/templates/: TitlePage.jinja
tests/: cmdline.py  conftest.py  forked_install.sh
(+23 files in other folders)
