[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "json5",
    "oarepo=={{cookiecutter.oarepo_version}}.*",
    "oarepo-runtime",
    "oarepo-ui",
    "python-dotenv",
    {% if cookiecutter.use_oarepo_vocabularies -%}
    "oarepo-vocabularies",
    {%- endif %}
]
requires-python = ">=3.9,<3.11"


[project.entry-points."invenio_assets.webpack"]
site = "{{cookiecutter.ui_package}}.branding.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
titlepage = "{{cookiecutter.ui_package}}.titlepage:create_blueprint"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"